feat(game): Fixed in-game display bugs